--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="frontend/imgs/logo_virtupro.png" class="header__img" alt="Logo de la empresa virtupro">
         <nav class="header__nav">
             <ul class="header__lista">
-                <li><a href="#" class="header__item">¿QUÉ SOMOS?</a></li>
+                <li><a href="frontend/pages/nosotros.html" class="header__item">¿QUÉ SOMOS?</a></li>
                 <li><a href="frontend/pages/login.html" class="header__item header__button">INGRESAR</a></li>
                 <li><a href="frontend/pages/register.html" class="header__item">CREAR CUENTA</a></li>
             </ul>
