Página Nosotros añadida

--- a/frontend/pages/nosotros.html
+++ b/frontend/pages/nosotros.html
@@ -4,8 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre VirtuPro</title>
+    <link rel="stylesheet" href="../css/styles.css ">
 </head>
-<body>
-    
+<body class="body--nosotros">
+    <header class="header">
+        <img src="../imgs/logo_virtupro.png" class="header__img" alt="Logo de la empresa virtupro">
+        <nav class="header__nav">
+            <ul class="header__lista">
+                <li><a href="../../index.html" class="header__item">MENÚ INICIAL</a></li>
+                <li><a href="login.html" class="header__item header__button">INGRESAR</a></li>
+                <li><a href="register.html" class="header__item">CREAR CUENTA</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <article class="main__info">
+            <section class="info__section">
+                <article class="info__bento">
+                    <section class="bento__column">
+                        <section class="bento__card">
+                            <h2>Evaluación efectiva y registro de progreso</h2>
+                        </section>
+                        <section class="bento__card">
+                            <h2>Resultados en tiempo real</h2>
+                        </section>
+                    </section>
+                    <section class="bento__card bento__card--height">
+                        <img src="../imgs/logo_virtupro.png" class="header__img" alt="Logo de la empresa">
+                        <h2>VirtuPro</h2>
+                        <br>
+                        <p class="card_description">VirtuPro garantiza una evaluación efectiva y un registro preciso del progreso de los empleados, permitiendo medir su aprendizaje de manera clara y estructurada.</p>
+                    </section>
+                    <section class="bento__column">
+                        <section class="bento__card">
+                            <h2>Evaluación efectiva y registro de progreso</h2>
+                        </section>
+                        <section class="bento__card">
+                            <h2>Resultados en tiempo real</h2>
+                        </section>
+                    </section>
+                </article>
+            </section>
+            <section class="info__section">
+                <article class="info__card">
+                    <header class="card__header">
+                        <h2 class="card__title">Isaac Bolaños</h2>
+                        <p>Front-End</p>
+                    </header>
+                    <section class="card__content">
+                        <img src="../imgs/desarrolladores/isaac.png" class="card__img" alt="Fotografia de isaac bolaños">
+                    </section>
+                </article>
+                <article class="info__card">
+                    <header class="card__header">
+                        <h2 class="card__title">Jesús Páez</h2>
+                        <p>Front-End</p>
+                    </header>
+                    <section class="card__content">
+                        <img src="../imgs/desarrolladores/jesus_paez.png" class="card__img" alt="Fotografia de isaac bolaños">
+                    </section>
+                </article>
+                <article class="info__card">
+                    <header class="card__header">
+                        <h2 class="card__title">Juan Bolaños</h2>
+                        <p>Front-End</p>
+                    </header>
+                    <section class="card__content">
+                        <img src="../imgs/desarrolladores/juan.png" class="card__img" alt="Fotografia de isaac bolaños">
+                    </section>
+                </article>
+                <article class="info__card">
+                    <header class="card__header">
+                        <h2 class="card__title">Carlos Urueta</h2>
+                        <p>Front-End</p>
+                    </header>
+                    <section class="card__content">
+                        <img src="../imgs/desarrolladores/carlos.webp" class="card__img" alt="Fotografia de isaac bolaños">
+                    </section>
+                </article>
+                <article class="info__card">
+                    <header class="card__header">
+                        <h2 class="card__title">Juan Bolaños</h2>
+                        <p>Front-End</p>
+                    </header>
+                    <section class="card__content">
+                        <img src="../imgs/desarrolladores/isaac.png" class="card__img" alt="Fotografia de isaac bolaños">
+                    </section>
+                </article>
+                <article class="info__card">
+                    <header class="card__header">
+                        <h2 class="card__title">Isaac Bolaños</h2>
+                        <p>Front-End</p>
+                    </header>
+                    <section class="card__content">
+                        <img src="../imgs/desarrolladores/isaac.png" class="card__img" alt="Fotografia de isaac bolaños">
+                    </section>
+                </article>
+            </section>
+        
+        </article>
+    </main>
 </body>
 </html>
