--- a/frontend/pages/panel.html
+++ b/frontend/pages/panel.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola</title>
+    <title>Panel - VirtPro</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    Hola mundo
+    <header class="header header--center">
+        <h2>CONTROL DE RIESGOS</h2>
+    </header>
+    <main class="main main--top">
+        <article class="main__riesgos">
+            <section class="riesgos__item">
+                <h2 class="riesgos__title">Riesgos para la Salud</h2>
+                <a href="#" class="azul">Azul</a>
+            </section>
+            <section class="riesgos__item">
+                <h2 class="riesgos__title">Riesgos de inflamabilidad</h2>
+                <a href="#" class="rojo">Rojo</a>
+            </section>
+            <section class="riesgos__item">
+                <h2 class="riesgos__title">Riesgos por reactividad <br> (inestabilidad)</h2>
+                <a href="#" class="amarillo">Amarillo</a>
+            </section>
+        </article>
+
+        <article class="main__proteccion">
+            <h2 class="riesgos__title" style="text-align: center;">Niveles de Protección Personal</h2>
+            <a href="#" class="proteccion__item">NIVEL A</a>
+            <a href="#" class="proteccion__item">NIVEL B</a>
+            <a href="#" class="proteccion__item">NIVEL C</a>
+            <a href="#" class="proteccion__item">NIVEL D</a>
+        </article>
+        <br>
+        <a href="#" class="main__title" style="text-align: center;">SELECCIÓN DE RESPIRADOR POR CÓDIGO DE COLOR</a>
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
