--- a/frontend/pages/cuestionario.html
+++ b/frontend/pages/cuestionario.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body class="body--cuestionario">
-    <header class="header header--cuestionario">
-            <h1>Seguridad Laboral</h1>
+    <header class="header--cuestionario">
+            <h2>Examen</h2>
             <p id="numeroPregunta"></p>
     </header>
     <main class="main--cuestionario">
