--- a/frontend/pages/panel.html
+++ b/frontend/pages/panel.html
@@ -8,27 +8,27 @@
 </head>
 <body>
     <header class="header header--center">
-        <h2>CONTROL DE RIESGOS</h2>
+        <h2 class="header__title">CONTROL DE RIESGOS</h2>
     </header>
     <main class="main main--top">
         <article class="main__riesgos">
             <section class="riesgos__item">
                 <h2 class="riesgos__title">Riesgos para la Salud</h2>
-                <a href="#" class="azul">Azul</a>
+                <a href="riesgos_rojo.html" class="azul">Azul</a>
             </section>
             <section class="riesgos__item">
                 <h2 class="riesgos__title">Riesgos de inflamabilidad</h2>
-                <a href="#" class="rojo">Rojo</a>
+                <a href="riesgos_rojo.html#riesgosInflamabilidad" class="rojo">Rojo</a>
             </section>
             <section class="riesgos__item">
                 <h2 class="riesgos__title">Riesgos por reactividad <br> (inestabilidad)</h2>
-                <a href="#" class="amarillo">Amarillo</a>
+                <a href="riesgos_rojo.html#riesgosReactividad" class="amarillo">Amarillo</a>
             </section>
         </article>
 
         <article class="main__proteccion">
             <h2 class="riesgos__title" style="text-align: center;">Niveles de Protección Personal</h2>
-            <a href="#" class="proteccion__item">NIVEL A</a>
+            <a href="cuestionario.html" class="proteccion__item">NIVEL A</a>
             <a href="#" class="proteccion__item">NIVEL B</a>
             <a href="#" class="proteccion__item">NIVEL C</a>
             <a href="#" class="proteccion__item">NIVEL D</a>
