Guardar intento funcionando

--- a/frontend/pages/panel.html
+++ b/frontend/pages/panel.html
@@ -9,6 +9,7 @@
 <body>
     <header class="header header--center">
         <h2 class="header__title">CONTROL DE RIESGOS</h2>
+        <a href="cuestionario.html">IR cuestionario</a>
     </header>
     <main class="main main--top">
         <article class="main__riesgos">
