--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -9,7 +9,7 @@
 <body class="body--form">
     <section class="contenedor">
         <form id="loginForm" action="http://localhost:3000/auth" method="POST" class="form">
-            <a href="/index.html">Regresar</a>
+            <a href="/index.html" style="color: black; ">REGRESAR</a>
             <h2 class="form__title">Inicio de Sesión</h2>
             <img src="../imgs/logo_virtupro.png" class="header__img" alt="">
             <article class="form__input form__input--login">
