--- a/frontend/pages/panel.html
+++ b/frontend/pages/panel.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header class="header header--center">
+    <header class="header header--space">
         <h2 class="header__title">CONTROL DE RIESGOS</h2>
-        <a href="cuestionario.html">IR cuestionario</a>
+        <a href="cuestionario.html" class="header__cuestionario">Realizar Cuestionario</a>
     </header>
     <main class="main main--top">
         <article class="main__riesgos">
