--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="frontend/css/styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header header--main">
         <nav class="header__nav">
             <ul class="header__lista">
                 <li><a href="frontend/pages/nosotros.html" class="header__item">¿QUÉ SOMOS?</a></li>
